<resources>
    <string name="app_name">NL App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_mail">Send Mail</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_correct_password">Enter correct password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="not_match">Password doesn\'t match</string>
    <string name="success_reg">Successful registration</string>
    <string name="error_reg">Registration failed</string>
    <string name="welcome">Welcome</string>
    <string name="short_password">Password is too short</string>
    <string name="log_out">Log Out</string>
    <string name="sure">Are you sure ?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="doent_exits">This email doesn\'t exist</string>
    <string name="check_email">Check Your Email</string>
    <string name="open">Open</string>
    <string name="url">https://www.youtube.com/watch?v=dQw4w9WgXcQ</string>
    <string name="currency_nexchange">Currency \nExchange</string>
    <string name="currency">Currency</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="confirm">Confirm</string>
    <string name="usd">USD</string>
    <string name="resultExchange"> %1$s  %2$s</string>
    <string name="search">Search</string>
    <string name="coin_list">Coin List</string>
    <string name="lastname">Last Name</string>
    <string name="name">Name</string>
    <string name="lastupdate">LastUpdate:</string>
    <string name="today_s_pricechange">Today\'s PriceChange:</string>
    <string name="today_s_low">Today\'s Low:</string>
    <string name="today_s_high">Today\'s High:</string>
    <string name="rank">Rank:</string>
    <string name="current_price">Current price:</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="added">Successfully added</string>
    <string name="removed">Successfully removed</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="security">Security</string>
    <string name="newps">New Password</string>
    <string name="confirmps">Confirm Password</string>
    <string name="image_url">Image Url</string>
    <string name="psChanged">Password Changed</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="btc">BTC</string>
    <string name="sample_value">20000$</string>
    <string name="remove_from_favorites">Remove From Favorites</string>
</resources>